==> AdamY53/-/90度转弯编码器测试/Hardware/OLED.c <==
#include "stm32f10x.h"
#include "OLED.h"
#include <stdarg.h>
#include <stdio.h>
#include <string.h>

void OLED_W_SCL(uint8_t BitValue)
{
	GPIO_WriteBit(OLED_GPIO_PORT, OLED_SCL_PIN, (BitAction)BitValue);
	OLED_Wait();
}

void OLED_W_SDA(uint8_t BitValue)
{
	GPIO_WriteBit(OLED_GPIO_PORT, OLED_SDA_PIN, (BitAction)BitValue);
	OLED_Wait();
}
