==> Carring06/OpenSource-Project/可调电源示例代码/Core/Src/OLED.c <==
#include "stm32f1xx_hal.h"
#include "OLED.h"
#include <string.h>
#include <math.h>
#include <stdio.h>
#include <stdarg.h>

void OLED_W_SCL(uint8_t BitValue)
{
	/*根据BitValue的值，将SCL置高电平或低电平*/
	HAL_GPIO_WritePin(GPIOB, GPIO_PIN_8, BitValue ? GPIO_PIN_SET : GPIO_PIN_RESET);

	/*单片机速度过快，用于延时保证时序，避免I2C通信的速度过快*/
	//HAL_Delay(1);
}

void OLED_W_SDA(uint8_t BitValue)
{
	/*根据BitValue的值，将SDA置高电平或低电平*/
	HAL_GPIO_WritePin(GPIOB, GPIO_PIN_9, BitValue ? GPIO_PIN_SET : GPIO_PIN_RESET);

	/*单片机速度过快，用于延时保证时序，避免I2C通信的速度过快*/
	//HAL_Delay(1);
}
